# SharedLog-Ikaria

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  clean.sh  erpc_default.nix  pmdk_default.nix
benchmarks/: add_up_csv.py  benchmark.cpp  calculate_avg.py  common_benchmark.h  finish_benchmark.sh  iperf_client.sh  iperf_server.sh  run_benchmarks.sh
nix/: dpdk.nix  erpc-dpdk.nix  erpc.nix  pmdk.nix  replNode.nix
src/: CRAQReplication.cpp  CRAQReplication.h  CRReplication.cpp  CRReplication.h  Log.cpp  Log.h  ReplicationManager.cpp  ReplicationManager.h  SharedLogNode.cpp  SharedLogNode.h  ThreadManager.cpp  ThreadManager.h  common_info.h  helperFunctions.cpp  helperFunctions.h
src/NetworkLayer/: CRAQNetworkManager.cpp  CRAQNetworkManager.h  CRNetworkManager.cpp  CRNetworkManager.h  Inbound.cpp  Inbound.h  NetworkManager.cpp  NetworkManager.h  Outbound.cpp  Outbound.h  common_networkLayer.h
tests/: benchmark.cpp  common_tests.h  run_node.cpp
